tests/fixtures/invalid/duplicate_impl.etcm
spec DuplicateImpl:
  value: int

impl smoke:
  value: 1

impl smoke:
  value: 2
